# sassy-cash

./: CMakeLists.txt
src/: MainForm.ui.qml  main.qml  qml.qrc
